--- a/css/_layout.css
+++ b/css/_layout.css
@@ -12,13 +12,21 @@
   background: hsla(0,0%,100%,0);
 }
 
-section .searchResults {
-  background-color: white;
+section .homeContent,
+section .aboutContent,
+section .bacContent {
+  margin: 30px 0 60px 0;
 }
 
+section .homeContent,
 section .aboutContent {
   background-color: white;
-  padding: 10px;
+  padding: 60px 40px;
+}
+
+.aboutDescription,
+.aboutTeam {
+  margin-bottom: 40px;
 }
 
 .aboutUs a {
